--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "buefy": "^0.7.1",
     "node-sass": "^4.11.0",
+    "pug": "^2.0.3",
     "pug-plain-loader": "^1.0.0",
     "sass-loader": "^7.1.0",
     "vue": "^2.5.21",
