--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "pug-plain-loader": "^1.0.0",
     "sass-loader": "^7.1.0",
     "vue": "^2.5.21",
+    "vue-carousel": "^0.17.0",
     "vue-router": "^3.0.1",
     "vue-socket.io": "^3.0.4",
     "vuex": "^3.0.1"
