--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "axios": "^0.18.0",
     "buefy": "^0.7.1",
     "node-sass": "^4.11.0",
     "pug": "^2.0.3",
